# universal-threads

./: .gitignore  README.md
inbox/: todo
inbox/11onl9l/: context.json
inbox/121qgq2/: context.json
inbox/test/: context.json  transcript.json
outbox/: todo
src/: index.js  package-lock.json  package.json
src/0. reddit-topic-fetcher/: index.js  package-lock.json  package.json  todo
src/0. topic-fetcher/: comment-object.json  index.js  package-lock.json  package.json  singleshot.js
src/1. context-adjuster/: index.js  package.json
src/2. script-tts/: context.js  input.txt  package-lock.json  package.json  singleshot.js  ssml.txt  text.txt  todo
src/3. video-director/: 1. pre-process.js  2. add-video-and-text.js  2. process.js  ffmpeg-buffer.js  index.js  package-lock.json  package.json  test.js  todo
src/999. twitch_fetcher/: Makefile  fetch.py  pyproject.toml
thumbnail-assets/: size.txt
