[tool.poetry]
name = "twitch-face-detection"
version = "0.1.0"
description = ""
authors = ["Travis Frisinger <tmfrisinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
opencv-python = "^4.8.1.78"
cv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
